# Haskell-Studies

./: README.md  blog-post.html  category-theory.md  html-conversion-todo.md
chapter-03/chapter-03.hsproj/: Main.hs  _Main.hsplay  chapter03.cabal
chapter-04/chapter-04.hsproj/: .uuid  Exercises.hs  Main.hs  _Exercises.hsplay  _Main.hsplay  chapter04.cabal
chapter-05/chapter-05.hsproj/: Dynamic.hs  ExerciseArith3Broken.hs  ExerciseDetermineTheType.hs  ExerciseSing.hs  Exercises.hs  Experiments.hs  _Distributor.hsplay  _Dynamic.hsplay  _ExerciseDetermineTheType.hsplay  chapter05.cabal
chapter-06/chapter-06.hsproj/: .uuid  Date.hs  Exercises.hs  Graph.hs  Main.hs  Poker.hs  _Date.hsplay  _Exercises.hsplay  _Graph.hsplay  _LinearAlgebra.hsplay  _Main.hsplay  _Poker.hsplay  chapter06.cabal
chapter-07/chapter-07.hsproj/: .uuid  Arith4.hs  Main.hs  _Arith4.hsplay  _Main.hsplay  chapter07.cabal
chapter-08/chapter-08.hsproj/: .uuid  Exercises.hs  WordNumber.hs  chapter08.cabal
chapter-09/chapter-09.hsproj/: .uuid  Main.hs  _Exercises.hsplay  chapter09.cabal
chapter-10/chapter-10.hsproj/: .uuid  Main.hs  _Exercises.hsplay  _Main.hsplay  chapter10.cabal
chapter-11/chapter-11.hsproj/: .uuid  Exercises.hs  Main.hs  _Cipher.hsplay  chapter11.cabal
chapter-12/: chapter-exercises.txt
chapter-12/chapter-12.hsproj/: .uuid  Exercises.hs  Main.hs
chapter-13/chapter-13.hsproj/: Main.hs  _CSVReader.hsplay  chapter13.cabal  data.csv
chapter-14/chapter-14.hsproj/: .uuid  Main.hs  SimpleArithmetic.hs
chapter-14/morse.hsproj/: .uuid  morse.cabal
chapter-15/chapter-15.hsproj/: .uuid  Main.hs  MonoidExercise8.hs  MonoidTest.hs  chapter15.cabal
chapter-16/chapter-16.hsproj/: .uuid  FunctorTest.hs  chapter16.cabal
chapter-17/chapter-17.hsproj/: Combinations.hs  Constant.hs  Identity.hs  Validation.hs  ValidationExperiments.hs  _Combinations.hsplay  _Constant.hsplay  _Identity.hsplay  _Lookups.hsplay  _ValidationExperiments.hsplay  chapter17.cabal
chapter-18/chapter-18.hsproj/: ChapterExercises.hs  KleisliComposition.hs  _ChapterExercises.hsplay  _Main.hsplay
chapter-19/chapter-19.hsproj/: .uuid  Main.hs  MonadTinkering.hs  Shawty.hs  _MonadTinkering.hsplay  chapter19.cabal
chapter-20/chapter-20.hsproj/: .uuid  ChapterExercises.hs  LibraryFunctions.hs
chapter-21/Untitled.hsproj/: .uuid
chapter-21/chapter-21.hsproj/: .uuid  ChapterExercises.hs  Main.hs  Tree.hs  _SkiFree.hsplay  _Tree.hsplay  chapter21.cabal
chapter-22/chapter-22.hsproj/: .uuid  Exercises.hs  Main.hs  MonadFunctions.hs  ReaderPractice.hs  _Exercises.hsplay  chapter22.cabal
chapter-23/chapter-23.hsproj/: FizzBuzzState.hs  Moi.hs  RandomExample.hs  RandomExample2.hs  _RandomExample.hsplay  chapter23.cabal
chapter-24/chapter-24.hsproj/: IPAddressUtil.hs  IniParser.hs  IntegerParser.hs  Main.hs  _IPAddressUtil.hsplay  _IniParser.hsplay  _LearnParsers.hsplay  _Main.hsplay  _SemanticVersioningParser.hsplay
chapter-25/chapter-25.hsproj/: Bifunctor.hs  Main.hs
chapter-26/chapter-26.hsproj/: ChapterExercises.hs  Excite.hs  HitCounter.hs  Light.hs  Light2.hs  Main.hs  MonadTrans.hs  ReaderT.hs  StateT.hs  _ChapterExercises.hsplay  _Excite.hsplay  (+4 more)
chapter-28/: -rtsopts  profile  profile.hs
chapter-30/: args.hs
haskell-book/: .gitignore
haskell-book/chapter-15/chapter-15.hsproj/: Exclamation.hs  Exercises.hs  MaybeAnotherMonoid.hs  Rest.hs  _Exercises.hsplay  _MonoidExercise8.hsplay  _MonoidTest.hsplay  _SemigroupExercises.hsplay  chapter15.cabal
haskell-book/chapter-24/chapter-24.hsproj/: .uuid  LearnParsers.hs  LogParser.hs  LogSample.txt  Main.hs  ParsingFractions.hs  PhoneNumberParser.hs  SemanticVersioningParser.hs  _IntegerParser.hsplay  _LogParser.hsplay  _PhoneNumberParser.hsplay  chapter24.cabal
haskell-book/chapter-26/chapter-26.hsproj/: .uuid  EitherT.hs  HitCounterSimple.hs  IdentityT.hs  Light.hs  Main.hs  MaybeT.hs  MorraCopied.hs  _HitCounterSimple.hsplay  _Main.hsplay  chapter26.cabal
haskell-book/chapter-26/purpose.hsproj/: .uuid  PurposeReaderT.hs  purpose.cabal
haskell-book/chapter-28/chapter-28.hsproj/: .uuid  Main.hs  UnionTests.hs  chapter28.cabal
parallel-and-concurrent/: README.md  meeting-notes.md
(+132 files in other folders)
