name: chapter23
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable chapter23
  main-is: Main.hs
  buildable: True
  build-depends:
      transformers -any,
      base -any,
      random -any
  default-language: Haskell2010
  other-modules:
      Moi
      RandomExample
      FizzBuzzState
      RandomExample2
      ChapterExercises
