name: chapter24
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
extra-source-files:
    LogSample.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable chapter24
  main-is: Main.hs
  buildable: True
  build-depends:
      bytestring -any,
      raw-strings-qq -any,
      text -any,
      trifecta -any,
      base -any,
      hspec -any,
      parsers -any,
      containers -any
  default-language: Haskell2010
  other-modules:
      ParsingFractions
      IntegerParser
      IniParser
      LogParser
      IPAddressUtil
      LearnParsers
      PhoneNumberParser
      SemanticVersioningParser
